service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pacman-service
  name: pacman-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: pacman
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
