ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pacman.local
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pacman
                port:
                  number: 80
